--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ config.log
 config.status
 configure
 libtool
+src/config/rito-config.h
+src/config/rito-config.h.in
 src/config/raven-config.h
 src/config/raven-config.h.in
 src/config/stamp-h1
@@ -118,6 +120,7 @@ test/cache/*
 /doc/doxygen/
 
 libravenconsensus.pc
+libritoconsensus.pc
 contrib/devtools/split-debug.sh
 .idea
 cmake-build-debug
